Fix flaky tests in MultiAIConsensusServiceTest and KnowledgeServiceTest